k8s/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: krampoline
  namespace: krampoline
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: krampoline
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krampoline
  namespace: krampoline
spec:
  selector:
    matchLabels:
      app: krampoline
  template:
    metadata:
      labels:
        app: krampoline
    spec:
      containers:
      - env:
        - name: OPENAI_API_KEY
          valueFrom:
            secretKeyRef:
              key: OPENAI_API_KEY
              name: api-keys-dm62k7hd5b
        - name: YOUTUBE_DATA_API_KEY
          valueFrom:
            secretKeyRef:
              key: YOUTUBE_DATA_API_KEY
              name: api-keys-dm62k7hd5b
        image: krmp-d2hub-idock.9rum.cc/dev-test/repo_fd34980ba039:latest
        name: krampoline
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app.kubernetes.io/managed-by: kargocd
  name: krampoline
  namespace: krampoline
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: krampoline
          servicePort: 8000
        path: /
        pathType: Prefix
